// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment edited use-case Should edit initial message on PR comment edit 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [
    {
      "channelId": "12345",
      "reviewCommentId": 1,
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":left_speech_bubble: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|replied>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Updated comment text",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "editMessageId": "ABCDE",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":left_speech_bubble: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|replied>:",
      "threadId": "ABCDE",
    },
  ],
}
`;

exports[`Comment edited use-case Should send generic message if initial comment was not found 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [
    {
      "channelId": "12345",
      "reviewCommentId": 1,
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
      "threadId": undefined,
    },
  ],
}
`;

exports[`Comment edited use-case Should send message on comment resolving and reopening 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [
    {
      "channelId": "12345",
      "reviewCommentId": 1,
    },
    {
      "channelId": "12345",
      "reviewCommentId": 1,
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved thread>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": 1714381184802,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved thread>:",
      "threadId": "ABCDE",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened thread>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened thread>:",
      "threadId": "ABCDE",
    },
  ],
}
`;
